test/sema/invalid-operands-to-logical-or.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

func main() {
    var foo = false;
    var bar = 0;
    // CHECK: [[@LINE+1]]:13: error: invalid operands to binary expression ('bool' and 'int')
    if (foo || bar) { }
}
